Menu z-index fixed

--- a/src/css/Julie.css
+++ b/src/css/Julie.css
@@ -1,106 +1,106 @@
 .menu_div {
-    width: 100%;
-    height: 80px;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    display: flex;
-    justify-content: space-between;
-    background-color: #7994b1;
-    align-items: center;
+  width: 100%;
+  height: 80px;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  justify-content: space-between;
+  background-color: #7994b1;
+  align-items: center;
+  z-index: 99;
 }
 
-.midter_div{
-width: 50px;
+.midter_div {
+  width: 50px;
 }
 
 .menu_knap {
-    text-align: center;
-    flex: 1;
-    transition: background-color 0.3s ease;
+  text-align: center;
+  flex: 1;
+  transition: background-color 0.3s ease;
 }
 
 .menu_knap img {
-    width: auto;
-    height: 25px;
+  width: auto;
+  height: 25px;
 }
 
 .menu_knap p {
-    margin: 0;
-    color: white;
-    font-size: 10px;
+  margin: 0;
+  color: white;
+  font-size: 10px;
 }
 
 .plus_knap {
-    position: absolute;
-    top: -30px;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 80px;
-    height: 80px;
-    background-color: #7994b1;
-    color: white;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 36px;
-    cursor: pointer;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+  position: absolute;
+  top: -30px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 80px;
+  height: 80px;
+  background-color: #7994b1;
+  color: white;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 36px;
+  cursor: pointer;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
 }
 
 .menu_knap:hover {
-    background-color: #6a83a0;
+  background-color: #6a83a0;
 }
 
 .plus_knap:hover {
-    background-color: #5f7494;
+  background-color: #5f7494;
 }
 
 .savings-page {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100vh; /* Fyld hele højden af browseren */
-    text-align: center;
-  }
-  
-  .savings-heading {
-    align-self: flex-start; /* Gør overskriften venstrestillet */
-    margin-left: 0px; /* Tilføjer lidt margen fra venstre kant */
-    margin-top: 170px;
-  }
-  
-  .savings-container {
-    margin: 20px;
-  }
-  
-  .form-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 20px;
-  }
-  
-  input {
-    padding: 10px;
-    margin: 5px;
-    border-radius: 20px;
-    border: 1px solid #ccc;
-    width: 250px; /* Fikseret bredde */
-    text-align: center; /* Centrerer tekst i inputfeltet */
-  }
-  
-  .button-container {
-    display: flex;
-    justify-content: center;
-    margin-top: 10px;
-    margin-bottom: 100px;
-  }
-  
-  .savings-image {
-    max-width: 100%;
-    height: auto;
-  }
-  
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh; /* Fyld hele højden af browseren */
+  text-align: center;
+}
+
+.savings-heading {
+  align-self: flex-start; /* Gør overskriften venstrestillet */
+  margin-left: 0px; /* Tilføjer lidt margen fra venstre kant */
+  margin-top: 170px;
+}
+
+.savings-container {
+  margin: 20px;
+}
+
+.form-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 20px;
+}
+
+input {
+  padding: 10px;
+  margin: 5px;
+  border-radius: 20px;
+  border: 1px solid #ccc;
+  width: 250px; /* Fikseret bredde */
+  text-align: center; /* Centrerer tekst i inputfeltet */
+}
+
+.button-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+  margin-bottom: 100px;
+}
+
+.savings-image {
+  max-width: 100%;
+  height: auto;
+}
